--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.16.8",
     "axios": "^1.2.1",
     "crypto-js": "^4.1.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vue3-smooth-dnd": "^0.0.6"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
